fix header format on small screens

--- a/public/framework/sass/header.sass
+++ b/public/framework/sass/header.sass
@@ -2,12 +2,16 @@ header
   height: 100px
   border: none !important
 
+  .row
+    margin-top: 15px
+
   h1
+    margin-top: 5px
     .navbar-brand
-      font-size: 50px !important
+      font-size: 50px
 
   .my-btn 
-    border: none !important
+    border: none
     height: 50px
     width: 100px
 
@@ -16,7 +20,11 @@ header
     height: 50px
     padding-top: 15px
 
-  #navBarSearchForm input[type=text] 
-    border: none !important
-    height: 50px
-    width: 40vw !important
+  #navBarSearchForm 
+    width: 100%
+    div
+      width: 100%
+    input[type=text] 
+      border: none
+      height: 50px
+      width: 75%
